# economy_simulator

./: AGENTS.md  NEXT_COMMAND.md  PROJECT_SPECIFICATION.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: unit-tests.yml
tests/: test_config_loader.py  test_distributions.py  test_income_wealth_models.py  test_models.py  test_models_phase2.py  test_simulation_engine.py  test_tax_model.py
wealth_sim_germany/analysis/: __init__.py  aggregations.py
wealth_sim_germany/config/: loader.py  schemas.py
wealth_sim_germany/data/: distributions.py
wealth_sim_germany/models/: government.py  income.py  person.py  tax.py  wealth.py
wealth_sim_germany/simulation/: __init__.py  engine.py  time_step.py
wealth_sim_germany/utils/: types.py
